fix overflow

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -337,7 +337,7 @@ height: 0;
 }
 
 .mobile-nav.mobile-nav.is-active {
-  padding-top: 25px;
+  padding-top: 105px;
   padding-left: 15px;
   display: block;
 }
